Fix alignment of datagrid sort icons

--- a/src/components/datagrid/_datagrid.scss
+++ b/src/components/datagrid/_datagrid.scss
@@ -2445,8 +2445,6 @@ $datagrid-short-row-height: 23px;
 
   .sort-asc > .icon {
     @include css3(transform, rotate(180deg));
-
-    left: -2px;
   }
 
   span {
